syntax = "proto3";

package agent.v1;
option go_package = "gen/agent/v1";

// Agent Service 
service AgentService {
  // 1. Handshake: request for register
  rpc Register (RegisterRequest) returns (RegisterResponse);

  // 2. pull configuration
  rpc PullConfig (PullConfigRequest) returns (PullConfigResponse);

  // 3. status
  rpc SendHeartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}

// --- Messages ---

message RegisterRequest {
  string node_id = 1;
  string hostname = 2;
  string agent_version = 3;
}

message RegisterResponse {
  string node_id = 1;
  string auth_token = 2;
}

message PullConfigRequest {}

message PullConfigResponse {
  string config_version = 1;
  bytes config_json = 2; 
}

message HeartbeatRequest {
  string status = 1; // "ONLINE", "ERROR"
  int32 uptime_seconds = 2;
}

message HeartbeatResponse {
  bool command_pending = 1;
}